--- a/src/app/movie-show/movie-show.component.css
+++ b/src/app/movie-show/movie-show.component.css
@@ -1,38 +1,131 @@
-.custom-dark-blue {
-  color: #010626;
+
+.custom-dark-blue { color: #010626; }
+.custom-blue { color: #021F59; }
+.custom-light-blue { color: #033E8C; }
+.custom-very-light-blue { color: #05DBF2; }
+.custom-grey { color: #BFAE99; }
+
+
+body {
+  /*background-color: #212121 !important;*/
+  background-color: #010626 !important;
 }
 
-.custom-blue {
-  color: #021F59;
+.grid-wrapper {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  height: 100%;
 }
 
-.custom-light-blue {
-  color: #033E8C;
+.box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center; /*only using it to showcase the card at the center here*/
 }
 
-.custom-very-light-blue {
-  color: #05DBF2;
+.card {
+  max-width: 300px; /*only using it for better showcase here*/
+  margin: 50px 10px; /*only using it for better showcase here*/
+  height: 40rem;
 }
 
-.custom-grey {
-  color: #BFAE99;
+.card-header {
+  color: #010626 !important;
 }
 
-.custom-header-blue {
-  color: #007bff
+.card-container {
+  display: -ms-grid;
+  display: grid;
+  -webkit-perspective: 700px;
+  perspective: 700px;
+  padding-bottom: 30px;
 }
 
+.card-title p, h4, h5 {
+  font-family: 'Nunito' !important;
+  text-align: center;
+  color: white;
+}
 
-.card{
-  width: 70%;
-  height: 90%;
-  margin:auto;
+.card-text {
+  font-family: 'Nunito' !important;
+  text-align: center;
+  color: white;
 }
 
 .card-img-top{
   height: 50%;
 }
 
-.card-body{
+.card-flip {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr;
+  -ms-grid-columns: 1fr;
+  grid-template: 1fr / 1fr;
+  grid-template-areas: "frontAndBack";
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+.card-flip div {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.front {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: frontAndBack;
+  background-color: #010626 !important;
+}
+
+.back {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: frontAndBack;
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+  background-color: #010626 !important;
+  /*margin: 0;*/
+  /*padding: 0;*/
+}
+
+.card-container:hover .card-flip {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.btn {
+  color: #010626 !important;
+}
+
+.btn:hover {
+  color: white !important;
+}
+
+.rating {
+  text-decoration: none;
+  color: white !important;
+}
+
+.rating:hover {
+  text-decoration: none;
+  color: #033E8C !important;
+}
+
+.movie {
+  position: fixed;
+  z-index: -1;
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
   height: 50%;
+  bottom: 0;
 }
