--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid mx-auto pt-5 pb-5">
 
-  <div class="row col-sm-12 justify-content-center">
-    <div class="col-3">
+  <div class="row col-sm-12 justify-content-sm-center">
+    <div class="col-sm-3">
       <img class="img" [src]="'data:image/jpeg;base64,'+movie.poster">
     </div>
-    <div class="col-3 justify-content-center">
+    <div class="col-sm-3 justify-content-center">
       <div class="text-sm-center custom-blue font-weight-bold pt-5">
         {{movie.title}}
       </div>
@@ -16,18 +16,18 @@
   <div *ngFor="let movieShow of movieShows" class="m-4">
     <div class="card">
       <div class="card-body">
-        <div class="row">
-          <div class="col-sm-10">
-            <div class="card-title custom-header-blue"> Προβολή {{movieShow.showDate| date:'dd/MM/yyyy'}} -
+        <div class="row col-sm-12 m-auto">
+          <div class="col-sm-9 text-center m-auto">
+            <div class="card-title custom-header-blue"> Προβολή {{movieShow.showDate| date:'dd/MM/yyyy'}}
               Ώρα έναρξης : {{movieShow.startTime| date:'hh:mm'}}
               Ώρα λήξης : {{movieShow.endTime| date:'hh:mm'}}
             </div>
             <div class="card-text">
-              {{movieShow.roomOfMovieShow.name}} - όροφος {{movieShow.roomOfMovieShow.floor}}
+              {{movieShow.roomOfMovieShow.name}} - {{movieShow.roomOfMovieShow.floor==0 ? 'ισόγειο ': movieShow.roomOfMovieShow.floor+'ος όροφος'}}
               <span>Διαθέσιμες θέσεις {{movieShow.roomOfMovieShow.capacity - movieShow.showTickets.length}}</span>
             </div>
           </div>
-          <div class="col-sm-2 justify-content-center m-auto">
+          <div class="col-sm-3 text-center m-auto">
             <a class="btn btn-primary btn-sm m-2" [routerLink]="['/purchaseform']"
                [queryParams]="{'movieId' :movie.id, 'movieShowId': movieShow.id}"> Κράτηση
             </a>
