--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="footer sm-light text-center text-lg-start fixed-bottom">
-  <p  class="text-xs-center text">© Copyright 2020. Protal students TSELEPATIOTIS - PAPADIMITRIOU - DAVLIANI.</p>
+  <p  class="text-xs-center text">© Copyright 2020. Protal students DAVLIANI - PAPADIMITRIOU - TSELEPATIOTIS.</p>
 </footer>
