--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #010626">
-  <a class="navbar-brand nav-link" style="color: #007bff;" routerLink="/index">My movie place</a>
+  <a class="navbar-brand nav-link font-weight-bold" style="color: #007bff;" routerLink="/index">My movie place</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarCollapse" aria-controls="navbarCollapse"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,7 @@
       <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='USER'">
         <a class="nav-link" routerLink="/user">user</a>
       </li>
-      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ROLE_ADMIN'">
+      <li class="nav-item" *ngIf="tokenStorageService.getUserRole()==='ADMIN'">
         <a class="nav-link" routerLink="/admin_panel">Διαχείριση</a>
       </li>
       <li class="nav-item">
@@ -27,21 +27,19 @@
       </li>
     </ul>
 
-      <div *ngIf="!tokenStorageService.getToken()" class="nav-item">
-        <a class="nav-link" routerLink="/register">register</a>
-      </div>
-      <div *ngIf="!tokenStorageService.getToken()" class="nav-item">
-        <a class="nav-link" routerLink="/login">login</a>
-      </div>
-
-    <div *ngIf="tokenStorageService.getToken()" class="nav-item">
-        <a class="nav-link" routerLink="/index" (click)="logout()">Αποσύνδεση</a>
+    <div *ngIf="!tokenStorageService.getToken()" class="nav-item">
+      <a class="nav-link" routerLink="/register">register</a>
     </div>
-
+    <div *ngIf="!tokenStorageService.getToken()" class="nav-item">
+      <a class="nav-link" routerLink="/login">login</a>
+    </div>
     <div *ngIf="tokenStorageService.getToken()">
-      <a class="nav-link" routerLink="/account">Λογαριασμός {{tokenStorageService.getUser()}}</a>
+      <a class="nav-link font-weight-bold" routerLink="/account">{{tokenStorageService.getUser()}}</a>
     </div>
-
+    <div *ngIf="tokenStorageService.getToken()" class="nav-item">
+      <a class="nav-link" routerLink="/index" (click)="logout()">
+        <i class="fa fa-power-off mat-icon-no-color"></i></a>
+    </div>
   </div>
 </nav>
 <router-outlet></router-outlet>
